<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gg"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="395dp"
        android:layout_height="129dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/minmenu" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/bangers"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="297dp"
        android:layout_height="207dp"
        android:layout_below="@+id/appTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="113dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/startButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:padding="16dp"
            android:text="@string/let_s_play"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/highestScoreButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/black"
            android:padding="16dp"
            android:text="@string/highest_score"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>